# Ollive

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  requirements.txt  vercel.json
backend/: Dockerfile  api.py  pyproject.toml  railway.toml  requirements.txt  start.sh
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: chat.py  conversations.py  ingest.py  metrics.py
backend/app/core/: config.py  database.py  exceptions.py
backend/app/models/: __init__.py  conversation.py  inference_log.py  message.py
backend/app/repositories/: __init__.py  conversation_repo.py  inference_log_repo.py  message_repo.py
backend/app/schemas/: __init__.py  chat.py  conversation.py  ingest.py  metrics.py
backend/app/services/: __init__.py  chat_service.py  conversation_service.py  ingestion_service.py  pii_service.py
backend/migrations/: env.py
backend/migrations/versions/: 529ebfcb4126_init.py  790bf7a39b4b_add_pinned_to_conversations.py  a83b2f9f8c12_enable_rls.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/constants/: api.constants.ts  index.ts  provider.constants.ts  ui.constants.ts
frontend/src/hooks/: index.ts  useBackendStatus.ts  useConversation.ts  useInferenceMetrics.ts
frontend/src/pages/: index.ts
frontend/src/sdk/: index.ts  logger.ts  pii-redactor.ts  provider-adapter.ts
frontend/src/services/: conversation.service.ts  health.service.ts  index.ts  ingestion.service.ts  llm.service.ts  (+1 more)
(+49 files in other folders)
